# Local-RAG-for-File-System_Fourth_Project

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
backend/: main.py  pyproject.toml
backend/api/: app.py  deps.py
backend/api/routes/: chat.py  documents.py  health.py  search.py  websocket.py
backend/application/: __init__.py  chat_with_documents.py  ingest_document.py
backend/config/: settings.py
backend/domain/: __init__.py  entities.py  interfaces.py
backend/infrastructure/database/: connection.py  models.py
backend/infrastructure/repositories/: sqlite_chat_repo.py  sqlite_document_repo.py
backend/infrastructure/storage/: __init__.py  file_manager.py
backend/infrastructure/vector/: hybrid_search.py  lancedb_store.py
backend/services/: __init__.py
backend/services/chunking/: __init__.py  chunker.py  hierarchical_chunker.py  token_counter.py
backend/services/citation/: __init__.py  citation_engine.py
backend/services/embedding/: embedding_service.py  model_registry.py
backend/services/llm/: __init__.py  ollama_service.py  prompt_builder.py
backend/services/ocr/: ocr_factory.py  ocr_service.py
backend/services/parsing/: __init__.py  code_parser.py  csv_parser.py  docx_parser.py  excel_parser.py  html_parser.py  json_parser.py  markdown_parser.py  parser_factory.py  pdf_parser.py  text_parser.py
backend/services/retrieval/: __init__.py  context_builder.py  reranker.py  retrieval_engine.py
backend/workers/: document_worker.py  task_queue.py
docs/: PROJECT_JOURNAL.md
marketing/: .gitignore  index.html
(+40 files in other folders)
