[project]
name = "notebooklm-backend"
version = "0.1.0"
description = "AI Backend for NotebookLM Local — FastAPI + LanceDB + Ollama"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # ── API Framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    # ── Database ──
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    # ── Vector Store ──
    "lancedb>=0.17.0",
    "pyarrow>=18.0.0",
    "tantivy>=0.22.0",
    # ── Embedding + Reranking ──
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    # ── LLM ──
    "ollama>=0.4.0",
    # ── Document Parsing ──
    "PyMuPDF>=1.25.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    # ── OCR ──
    "paddleocr>=2.9.0",
    "paddlepaddle>=3.0.0",
    "pytesseract>=0.3.13",
    # ── NLP Utilities ──
    "tiktoken>=0.8.0",
    "langdetect>=1.0.9",
    # ── Utils ──
    "httpx>=0.28.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
